--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,17 +4,21 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-
-        <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
-
+        
+        {% block stylesheets %}
+        {% endblock %}
+        
         {% block javascripts %}
-            {% block importmap %}
-                {{ importmap('app') }}
-            {% endblock %}
+            {{ importmap('app') }}
         {% endblock %}
     </head>
     <body>
         {% include 'navbar.html.twig' %}
-        {% block body %}{% endblock %}
+        <div class="container mt-4">
+            {% block body %}{% endblock %}
+        </div>
+
+        {% include 'project/modal_create_project.html.twig' %}
+        {% include 'issue/modal_create_issue.html.twig' %}
     </body>
 </html>
