--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -2,46 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign up</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-ENjdO4Dr2bkBIFxQpeoYmv1zJkBv3S2e3z9+r+6E2YbBcpVFi6rZh6fAdVQSZe5L"
-          crossorigin="anonymous">
+    <title>S'incrire</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
     {% block javascripts %}
-        {% block importmap %}
-            {{ importmap('app') }}
-        {% endblock %}
+        {{ importmap('app') }}
     {% endblock %}
 </head>
 <body>
-    <div class = "container mt-5">
-        {{ form_start(form, { 'attr' : { 'class' : 'row justify-content-center' } }) }}
-        <div class = "col-md-6 col-sm-12 mb-3">
-            <div class = "card">
-                <div class = "card-body">
-                    <h1 class = "h3 mb-3 fw-bold text-center">Sign up</h1>
-                    <div class = "form-floating mb-3">
-                        {{ form_widget(form.username) }}
-                        {{ form_label(form.username) }}
-                    </div>
-                    <div class = "form-floating mb-3">
-                        {{ form_widget(form.password.first) }}
-                        {{ form_label(form.password.first) }}
-                    </div>
-                    <div class = "form-floating mb-3">
-                        {{ form_widget(form.password.second) }}
-                        {{ form_label(form.password.second) }}
-                    </div>
+    <div class="container mt-5">
+        {{ form_start(form, { 'attr': {'class': 'row justify-content-center' } }) }}
+            <div class="col-md-6 col-sm-12 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="h3 mb-3 fw-bold text-center">S'inscrire</h1>
 
-                    {{ form_widget(form.submit) }}
+                        <div class="form-floating mb-3">
+                            {{ form_widget(form.username) }}
+                            {{ form_label(form.username) }}
+                        </div>
 
-                    <p class = "my-3 text-muted">
-                        Got an account ? <a class = "text-decoration-none" href = "{{ path("login_index") }}">Log in</a>
-                    </p>
+                        <div class="form-floating mb-3">
+                            {{ form_widget(form.password.first) }}
+                            {{ form_label(form.password.first) }}
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            {{ form_widget(form.password.second) }}
+                            {{ form_label(form.password.second) }}
+                        </div>
+
+                        {{ form_widget(form.submit) }}
+
+                        <p class="my-3 text-muted">
+                            Vous avez déjà un compte ? <a class="text-decoration-none" href="{{ path('login_index') }}">Se connecter</a>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
         {{ form_end(form) }}
     </div>
 </body>
