--- a/templates/components/ProfileForm.html.twig
+++ b/templates/components/ProfileForm.html.twig
@@ -1,12 +1,11 @@
-<div {{ attributes }} class="card bg-light">
+<div {{ attributes }}>
     <div class="card-body">
         {{ form_start(form, {
             'attr': {
-                'novalidate': true,
                 'data-action': 'live#action:prevent',
-                'data-live-action-param': 'save'
-            }
+                'data-live-action-param': 'save',
+                'novalidate': true,
+            },
         }) }}
         {{ form_end(form) }}
-    </div>
 </div>
