--- a/templates/components/ProjectsList.html.twig
+++ b/templates/components/ProjectsList.html.twig
@@ -1,20 +1,18 @@
 <div {{  attributes }}>
     {% if projects|length == 0 %}
         <div class="mt-5 text-center">
-            <h5 class="fw-bold">Vous n'avez actuellement aucun projet</h5>
-            <p>Créez votre premier projet dans TaskSphere</p>
-            <button class="btn btn-primary" data-bs-target="#modalCreateProject" data-bs-toggle="modal">
-                Créer un projet
-            </button>
+            <h5 class="fw-bold">You currently don't have any project</h5>
+            <p>Create your first Tasker project</p>
+            <button class="btn btn-primary" data-bs-target="#modalCreateProject" data-bs-toggle="modal">New project</button>
         </div>
     {% else %}
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                    <th class="w-50">Nom</th>
-                    <th class="w-25">Clé</th>
-                    <th class="w-25">Response</th>
-                    <th class="text-center">Actions</th>
+                    <th class="w-50"><i class="bi bi-explicit-fill"></i> Name</th>
+                    <th class="w-25"><i class="bi bi-tag-fill"></i> Key</th>
+                    <th class="w-25"><i class="bi bi-person-fill"></i> Assignee</th>
+                    <th class="text-center"><i class="bi bi-three-dots-vertical"></i> Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -24,15 +22,8 @@
                         <td>{{ project.keyCode }}</td>
                         <td>{{ project.lead }}</td>
                         <td class="hstack gap-3 text-center">
-                            <a class="btn btn-sm btn-primary" href="{{ path('project_show', {'keyCode': project.keyCode}) }}">Voir</a>
-                            <button class="btn btn-sm btn-danger"
-                                data-action="live#action:prevent"
-                                data-live-action-param="deleteProject"
-                                data-live-key-code-param="{{ project.keyCode }}"
-                            >
-                                Supprimer
-                            </button>
-
+                            <a class="btn btn-sm btn-primary" href="{{ path('project_show', {'keyCode': project.keyCode}) }}">See <i class="bi bi-arrow-up-right-square-fill"></i></a>
+                            <button class="btn btn-sm btn-danger" data-action="live#action:prevent" data-live-action-param="deleteProject" data-live-key-code-param="{{ project.keyCode }}">Delete <i class="bi bi-trash2-fill"></i></button>
                         </td>
                     </tr>
                 {% endfor %}
