--- a/templates/project/list.html.twig
+++ b/templates/project/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Projets{% endblock %}
+{% block title %}Projects{% endblock %}
 
 {% block body %}
     <div class="container mt-3">
