--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,17 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        
+        <link rel="icon" href="{{ asset('icons/favicon.svg') }}" type="image/svg+xml">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
         {% block stylesheets %}
         {% endblock %}
-        
+
         {% block javascripts %}
             {{ importmap('app') }}
         {% endblock %}
     </head>
     <body>
         {% include 'navbar.html.twig' %}
+
         <div class="container mt-4">
             {% block body %}{% endblock %}
         </div>
