--- a/templates/components/InputStoryPointEstimate.html.twig
+++ b/templates/components/InputStoryPointEstimate.html.twig
@@ -1,11 +1,3 @@
 <div {{ attributes }}>
-    <input aria-label="Points"
-        class="form-control"
-        data-action="live#action"
-        data-live-action-param="updateStoryPointEstimate"
-        data-model="issue.storyPointEstimate"
-        min="0"
-        required
-        type="number"
-    >
+    <input aria-label="Points" class="form-control" data-action="live#action" data-live-action-param="updateStoryPointEstimate" data-model="issue.storyPointEstimate" type="number" min="0" required>
 </div>
