--- a/templates/components/IssueForm.html.twig
+++ b/templates/components/IssueForm.html.twig
@@ -5,17 +5,17 @@
             'data-live-action-param': 'save'
         }
     }) }}
-    <div class="modal-body">
-        {{  form_row(form.project) }}
-        {{  form_row(form.type) }}
-        {{  form_row(form.status) }}
-        {{  form_row(form.summary) }}
-        {{  form_row(form.assignee) }}
-        {{  form_row(form.reporter) }}
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-        {{  form_widget(form.submit) }}
-    </div>
+        <div class="modal-body">
+            {{ form_row(form.project) }}
+            {{ form_row(form.type) }}
+            {{ form_row(form.status) }}
+            {{ form_row(form.summary) }}
+            {{ form_row(form.assignee) }}
+            {{ form_row(form.reporter) }}
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-x"></i> Close</button>
+            {{ form_widget(form.submit) }}
+        </div>
     {{ form_end(form) }}
 </div>
