--- a/templates/components/ProjectForm.html.twig
+++ b/templates/components/ProjectForm.html.twig
@@ -5,13 +5,13 @@
             'data-live-action-param': 'save'
         }
     }) }}
-    <div class="modal-body">
-        {{  form_row(form.name) }}
-        {{  form_row(form.keyCode) }}
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-        {{  form_widget(form.submit) }}
-    </div>
+        <div class="modal-body">
+            {{ form_row(form.name) }}
+            {{ form_row(form.keyCode) }}
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-x"></i> Close</button>
+            {{ form_widget(form.submit) }}
+        </div>
     {{ form_end(form) }}
 </div>
