--- a/templates/components/SelectIssueReporter.html.twig
+++ b/templates/components/SelectIssueReporter.html.twig
@@ -1,16 +1,11 @@
 <div {{ attributes }} >
-    <select aria-label="Responsable"
-        class="form-select mb-3"
-        data-action="live#action"
-        data-live-action-param="updateReporter"
-        data-model="reporter"
-    >
-    {% for person in people %}
-        {% if issue.reporter == person %}
-            <option value="{{ person.id }}" selected>{{ person }}</option>
-        {% else %}
-            <option value="{{ person.id }}">{{ person }}</option>
-        {% endif %}
-    {% endfor %}
+    <select aria-label="Reporter" class="form-select mb-3" data-action="live#action" data-live-action-param="updateReporter" data-model="reporter">
+        {% for person in people %}
+            {% if issue.reporter == person %}
+                <option value="{{ person.id }}" selected>{{ person }}</option>
+            {% else %}
+                <option value="{{ person.id }}">{{ person }}</option>
+            {% endif %}
+        {% endfor %}
     </select>
 </div>
